[build-system]
build-backend = "setuptools.build_meta"
requires      = [
	"Cython     >= 0.29.34",
	"numpy      >= 1.19.4",
	"setuptools >= 67.7.2",
	"wheel      >= 0.37.1"
]

[project]
name            = "psxfudge"
description     = "Asset building toolkit for PlayStation 1 development"
readme          = "README.md"
license.file    = "LICENSE"
authors         = [
	{ name = "spicyjpeg" }
]
requires-python = ">= 3.10"
dynamic         = [ "version" ]
dependencies    = [
	"av     >= 8.0.3",
	"numpy  >= 1.19.4",
	"Pillow >= 8.2.0"
]
classifiers     = [
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Topic :: Multimedia :: Graphics :: Graphics Conversion",
	"Topic :: Multimedia :: Sound/Audio :: Conversion",
	"Topic :: Multimedia :: Video :: Conversion",
	"Topic :: Software Development :: Build Tools",
	"Topic :: Utilities"
]

[project.urls]
"Repository" = "https://github.com/spicyjpeg/psxfudge"

[project.scripts]
fudgetim    = "psxfudge.cli.tim:fudgetim"
fudgebundle = "psxfudge.cli.bundle:fudgebundle"

[tool.setuptools]
packages = [
	"psxfudge",
	"psxfudge.cli"
]

[tool.setuptools.dynamic.version]
attr = "psxfudge.__version__"
